working on implementation...

--- a/anomaly-detection.ipynb
+++ b/anomaly-detection.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,12 @@
     "from torchvision import datasets, transforms\n",
     "\n",
     "from pytorch_metric_learning import losses, testers\n",
-    "from pytorch_metric_learning.utils.accuracy_calculator import AccuracyCalculator"
+    "from pytorch_metric_learning.utils.accuracy_calculator import AccuracyCalculator\n",
+    "\n",
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -43,14 +48,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read in Dataset"
+    "## Define Useful Functions / Import Custom Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Useful Functions\n",
+    "\n",
+    "from load_dataset import load_dataset_pd"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Useful Functions"
+    "## Load the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the Dataset\n",
+    "\n",
+    "# the directory containing the CIC-IDS2017 dataset\n",
+    "DATASET_DIR : str = \"./CIC-IDS2017/\"\n",
+    "\n",
+    "# load the dataset\n",
+    "file_paths, dfs = load_dataset_pd ( dataset_dir = DATASET_DIR )\n",
+    "\n",
+    "# print contents\n",
+    "for file_path, df in zip ( file_paths, dfs ):\n",
+    "    print ( f\"File Path: { file_path }\" )\n",
+    "    print ( df.head ( n = 2 ) )"
    ]
   },
   {
@@ -75,7 +111,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
