--- a/anomaly-detection.ipynb
+++ b/anomaly-detection.ipynb
@@ -53,27 +53,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Useful Functions\n",
-    "\n",
-    "from load_dataset import load_dataset_pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load the Dataset"
+    "from load_dataset import load_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading CSV file data from the directory './CIC-IDS2017/'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 8/8 [00:07<00:00,  1.02it/s]\n",
+      "100%|██████████| 8/8 [00:02<00:00,  2.97it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the Dataset\n",
     "\n",
@@ -81,12 +89,7 @@
     "DATASET_DIR : str = \"./CIC-IDS2017/\"\n",
     "\n",
     "# load the dataset\n",
-    "file_paths, dfs = load_dataset_pd ( dataset_dir = DATASET_DIR )\n",
-    "\n",
-    "# print contents\n",
-    "for file_path, df in zip ( file_paths, dfs ):\n",
-    "    print ( f\"File Path: { file_path }\" )\n",
-    "    print ( df.head ( n = 2 ) )"
+    "test_labels, port_labels, test_features, port_only_features = load_dataset ( dataset_dir = DATASET_DIR, num_high_traffic_ports = 5 )\n"
    ]
   },
   {
@@ -97,10 +100,124 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([], size=(0, 78), dtype=torch.float16)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "num_samples should be a positive integer value, but got num_samples=0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 61\u001b[0m\n\u001b[1;32m     59\u001b[0m batch_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m64\u001b[39m\n\u001b[1;32m     60\u001b[0m \u001b[38;5;28mprint\u001b[39m(port_only_features[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m---> 61\u001b[0m train_loader \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataLoader\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     62\u001b[0m \u001b[43m    \u001b[49m\u001b[43mport_only_features\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshuffle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\n\u001b[1;32m     63\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     64\u001b[0m test_loader \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mDataLoader(test_features[\u001b[38;5;241m0\u001b[39m], batch_size\u001b[38;5;241m=\u001b[39mbatch_size)\n\u001b[1;32m     66\u001b[0m model \u001b[38;5;241m=\u001b[39m Net()\u001b[38;5;241m.\u001b[39mto(device)\n",
+      "File \u001b[0;32m~/anaconda3/envs/anomaly_detection/lib/python3.11/site-packages/torch/utils/data/dataloader.py:351\u001b[0m, in \u001b[0;36mDataLoader.__init__\u001b[0;34m(self, dataset, batch_size, shuffle, sampler, batch_sampler, num_workers, collate_fn, pin_memory, drop_last, timeout, worker_init_fn, multiprocessing_context, generator, prefetch_factor, persistent_workers, pin_memory_device)\u001b[0m\n\u001b[1;32m    349\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:  \u001b[38;5;66;03m# map-style\u001b[39;00m\n\u001b[1;32m    350\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m shuffle:\n\u001b[0;32m--> 351\u001b[0m         sampler \u001b[38;5;241m=\u001b[39m \u001b[43mRandomSampler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgenerator\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgenerator\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n\u001b[1;32m    352\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    353\u001b[0m         sampler \u001b[38;5;241m=\u001b[39m SequentialSampler(dataset)  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/anomaly_detection/lib/python3.11/site-packages/torch/utils/data/sampler.py:144\u001b[0m, in \u001b[0;36mRandomSampler.__init__\u001b[0;34m(self, data_source, replacement, num_samples, generator)\u001b[0m\n\u001b[1;32m    141\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreplacement should be a boolean value, but got replacement=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreplacement\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    143\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_samples, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_samples \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 144\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_samples should be a positive integer value, but got num_samples=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_samples\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: num_samples should be a positive integer value, but got num_samples=0"
+     ]
+    }
+   ],
+   "source": [
+    "### MNIST code originally from https://github.com/pytorch/examples/blob/master/mnist/main.py ###\n",
+    "class Net(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(1, 32, 3, 1)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, 3, 1)\n",
+    "        self.dropout1 = nn.Dropout2d(0.25)\n",
+    "        self.dropout2 = nn.Dropout2d(0.5)\n",
+    "        self.fc1 = nn.Linear(9216, 128)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.conv2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = F.max_pool2d(x, 2)\n",
+    "        x = self.dropout1(x)\n",
+    "        x = torch.flatten(x, 1)\n",
+    "        x = self.fc1(x)\n",
+    "        return x\n",
+    "\n",
+    "### MNIST code originally from https://github.com/pytorch/examples/blob/master/mnist/main.py ###\n",
+    "def train(model, loss_func, device, train_loader, optimizer, loss_optimizer, epoch):\n",
+    "    model.train()\n",
+    "    for batch_idx, (data, labels) in enumerate(train_loader):\n",
+    "        data, labels = data.to(device), labels.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss_optimizer.zero_grad()\n",
+    "        embeddings = model(data)\n",
+    "        loss = loss_func(embeddings, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        loss_optimizer.step()\n",
+    "        if batch_idx % 100 == 0:\n",
+    "            print(\"Epoch {} Iteration {}: Loss = {}\".format(epoch, batch_idx, loss))\n",
+    "\n",
+    "\n",
+    "### convenient function from pytorch-metric-learning ###\n",
+    "def get_all_embeddings(dataset, model):\n",
+    "    tester = testers.BaseTester()\n",
+    "    return tester.get_all_embeddings(dataset, model)\n",
+    "\n",
+    "\n",
+    "### compute accuracy using AccuracyCalculator from pytorch-metric-learning ###\n",
+    "def test(train_set, test_set, model, accuracy_calculator):\n",
+    "    train_embeddings, train_labels = get_all_embeddings(train_set, model)\n",
+    "    test_embeddings, test_labels = get_all_embeddings(test_set, model)\n",
+    "    train_labels = train_labels.squeeze(1)\n",
+    "    test_labels = test_labels.squeeze(1)\n",
+    "    print(\"Computing accuracy\")\n",
+    "    accuracies = accuracy_calculator.get_accuracy(\n",
+    "        test_embeddings, test_labels, train_embeddings, train_labels, False\n",
+    "    )\n",
+    "    print(\"Test set accuracy (Precision@1) = {}\".format(accuracies[\"precision_at_1\"]))\n",
+    "\n",
+    "\n",
+    "device = torch.device(\"cuda\")\n",
+    "\n",
+    "batch_size = 64\n",
+    "print(port_only_features[0])\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "    port_only_features[0], batch_size=batch_size, shuffle=True\n",
+    ")\n",
+    "test_loader = torch.utils.data.DataLoader(test_features[0], batch_size=batch_size)\n",
+    "\n",
+    "model = Net().to(device)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
+    "num_epochs = 2\n",
+    "\n",
+    "### pytorch-metric-learning stuff ###\n",
+    "loss_func = losses.SubCenterArcFaceLoss(num_classes=10, embedding_size=128).to(device)\n",
+    "loss_optimizer = torch.optim.Adam(loss_func.parameters(), lr=1e-4)\n",
+    "accuracy_calculator = AccuracyCalculator(include=(\"precision_at_1\",), k=1)\n",
+    "### pytorch-metric-learning stuff ###"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(1, num_epochs + 1):\n",
+    "    train(model, loss_func, device, train_loader, optimizer, loss_optimizer, epoch)\n",
+    "    test(port_only_features[0], test_features[0], model, accuracy_calculator)"
    ]
   }
  ],
